@startuml Class_Kho_BaoHanh_RutGon
title Simplified class map
class Product
class ProductSerial
class StockDocument
class StockBalance
class StockLedger
class Invoice
class Warranty
class AuditLog
Product --> ProductSerial
Product --> StockBalance
StockDocument --> StockLedger
StockDocument --> ProductSerial
Invoice --> StockDocument
ProductSerial --> Warranty
Warranty --> AuditLog
StockLedger --> AuditLog
@enduml
